--- a/src/app/pages/admin/products/products.component.html
+++ b/src/app/pages/admin/products/products.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
     <div class="row mt-3">
-      <div class="col-md-12">
+      <div  [ngClass]="isSidePanelVisible ? 'col-8' : 'col-12'" >
         <div class="card">
           <div class="card-header bg-primary">
             <div class="row">
@@ -8,20 +8,109 @@
                 <h5>Product List</h5>
               </div>
               <div class="col-md-6 text-end">
-                <button class="btn btn-sm btn-success" (click)="openProductModal()">New</button>
+                <button class="btn btn-sm btn-success" (click)="openSidePanel()">New</button>
               </div>
             </div>
           </div>
           <div class="card-body">
             <div class="row">
-            
-             
+              <div class="col-3">
+                <div class="card" >
+                  <img src="..." class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                  </div>
+                </div>
+              </div>
+              <div class="col-3">
+                <div class="card" >
+                  <img src="..." class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                  </div>
+                </div>
+              </div>
+              <div class="col-3">
+                <div class="card" >
+                  <img src="..." class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
-        </div>
+        </div> 
       </div>
       <!-- new product modal starts -->
       
       <!-- new product modal ends -->
+      <div class="col-md-4" *ngIf="isSidePanelVisible">
+        <div class="card">
+          <div class="card-header bg-primary">
+            <div class="row">
+              <div class="col-md-6">
+                <h5>New Product</h5>
+              </div>
+              <div class="col-md-6 text-end">
+                <button class="btn btn-sm btn-success" (click)="closeSidePanel()">Close</button>
+              </div>
+            </div>
+          </div>
+          <div class="card-body">
+            <div class="row">
+              <div class="col-6">
+                <label for="">SKU</label>
+                <input type="text" [(ngModel)]="productObj.productSku" class="form-control">
+              </div>
+              <div class="col-6">
+                <label for="">Name</label>
+                <input type="text" [(ngModel)]="productObj.productName" class="form-control">
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-6">
+                <label for="">Price</label>
+                <input type="text" [(ngModel)]="productObj.productPrice" class="form-control">
+              </div>
+              <div class="col-6">
+                <label for="">Short Name</label>
+                <input type="text" [(ngModel)]="productObj.productShortName" class="form-control">
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-6">
+                <label for="">Delivery Time Span</label>
+                <input type="text" [(ngModel)]="productObj.deliveryTimeSpan" class="form-control">
+              </div>
+              <div class="col-6">
+                <label for="">Category</label>
+                <select [(ngModel)]="productObj.categoryId" class="form-select">
+                  <option *ngFor="let cate of categoryList" [value]="cate.categoryId">{{cate.categoryName}}</option>
+                </select>
+              </div>
+            </div>
+            <div class="row">|
+              <div class="col-12">
+                <label for="">Image Url</label>
+                <input type="text" [(ngModel)]="productObj.productImageUrl" class="form-control">
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-12">
+                <label for="">Description</label>
+                <textarea rows="4" [(ngModel)]="productObj.productDescription" class="form-control"></textarea>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
+ 
